Fixed Z-index issue

--- a/src/app/widgets/Visualizer/machine-status-area.styl
+++ b/src/app/widgets/Visualizer/machine-status-area.styl
@@ -86,7 +86,6 @@
         background-color: rgba(bgColor, 0.6);
         color: rgba(textColor, 0.8);
         pointer-events: none
-        z-index: 10000;
     }
 
     &-Disconnected {
